istio/security/authz/ingressgateway.yaml
kind: AuthorizationPolicy
apiVersion: security.istio.io/v1beta1
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
    - to:
        - operation:
            methods:
              - GET
              - POST
            paths:
              - /ip
            ports:
              - "8080"
